--- a/app.json
+++ b/app.json
@@ -11,8 +11,12 @@
         "GATEWAY_API_PASSWORD": {
             "required": true,
             "description": "Your TEST Gateway API password"
+        },       
+        "GATEWAY_REGION": {
+            "required": true,
+            "description": "The Gateway region to target (options: ASIA_PACIFIC, EUROPE, NORTH_AMERICA, MTF)",
+            "value": "MTF"
         },
-
         "GATEWAY_API_VERSION": {
             "required": true,
             "description": "The Gateway API version to target",
